SUBDIRS = @MASTER_NUGGET@
SUBDIRS += @ARCHIVE_INFLATE@
SUBDIRS += @CLAMAV_NUGGET@
SUBDIRS += @FILE_INJECT@
SUBDIRS += @FS_MONITOR@
SUBDIRS += @FS_WALK@
SUBDIRS += @LIBEMU_NUGGET@
SUBDIRS += @LOG_NUGGET@
SUBDIRS += @OFFICE_CAT@
SUBDIRS += @PDF_DISSECTOR@
SUBDIRS += @PDF_FOX@
SUBDIRS += @SCRIPT_NUGGET@
SUBDIRS += @SMTP_PARSER@
SUBDIRS += @SNORT@
SUBDIRS += @SWF_SCANNER@
SUBDIRS += @SYSLOG_NUGGET@
SUBDIRS += @RAZORD@
SUBDIRS += @VIRUS_TOTAL@
SUBDIRS += @YARA_NUGGET@
