#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.61])
#m4_include([common_m4/versions.m4])
AC_INIT([ui], 0.6.0, [https://sourceforge.net/apps/trac/razorbacktm/])
AC_CONFIG_AUX_DIR([.])
AC_CONFIG_MACRO_DIR([m4])
#AC_CONFIG_SRCDIR([src/thread.c])
#AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([foreign no-define tar-ustar subdir-objects])


AC_CONFIG_FILES([ \
Makefile \
rzb_ui/Makefile \
])
AC_OUTPUT
