AUTOMAKE_OPTIONS=no-dependencies

nobase_include_HEADERS = \
razorback/api.h \
razorback/block.h \
razorback/block_id.h \
razorback/block_pool.h \
razorback/config_file.h \
razorback/connected_entity.h \
razorback/daemon.h \
razorback/debug.h \
razorback/event.h \
razorback/file.h \
razorback.h \
razorback/hash.h \
razorback/inspector_queue.h \
razorback/json_buffer.h \
razorback/judgment.h \
razorback/list.h \
razorback/lock.h \
razorback/log.h \
razorback/message_formats.h \
razorback/messages.h \
razorback/metadata.h \
razorback/ntlv.h \
razorback/nugget.h \
razorback/queue.h \
razorback/queue_list.h \
razorback/response_queue.h \
razorback/socket.h \
razorback/string_list.h \
razorback/submission.h \
razorback/thread.h \
razorback/thread_pool.h \
razorback/timer.h \
razorback/types.h \
razorback/uuids.h \
razorback/visibility.h
